--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,40 @@
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
 *.o
 *.hi
 
-.vscode
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
 
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+# Personal shit
+.vscode
 uzume.so
 a.out
+tests/
